nav menus alignment fixes

--- a/styles/menu.css
+++ b/styles/menu.css
@@ -8,22 +8,12 @@
     box-shadow: none !important;
 }
 
-.menu-text {
-    padding-left: 5px;
-    font-family: 'Nunito', sans-serif;
-    font-weight: bold;
-}
-
-.notification-count-badge {
-    padding: 3px 6px;
+.count-badge-notification {
     background: rgb(168 200 235 / 45%);
-    border-radius: 70%;
     color: white;
-    font-size: 12px;
     margin-top: -12px;
     margin-left: -2px;
 }
-
 
 .menu-item{
     width: 300px;
