--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -16,14 +16,24 @@
     font-weight: 500;
 }
 
-.cart-count-badge {
+.navbar-menu-text {
+    padding-left: 5px;
+    font-family: 'Nunito', sans-serif;
+    font-weight: bold;
+}
+
+.count-badge {
+    position: absolute;
     padding: 3px 6px;
-    background: rgb(168 200 235 / 45%);
     border-radius: 70%;
-    top: -10px;
-    right: -10px;
+    font-size: 12px;
+}
+
+.count-badge-cart {
+    background: rgb(168 200 235 / 45%);
     color: white;
-    font-size: 12px
+    margin-top: -12px;
+    margin-left: 2px;
 }
 
 .my-account {
